# grpc-protobuffs-test

./: .gitignore  Cargo.toml  Makefile  build.rs  greeter_client.py  index.js  index.ts  package.json  pyproject.toml  tsconfig.json
codegen_impl/: test_pb2.py  test_pb2_grpc.py
services/: test.proto
src/: server.rs
